// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketReply component should render an alert instead of the editor because the ticket is not repliable on this channel 1`] = `
<div
  className="component alert-warning"
>
  <div
    className="alert"
  >
    You cannot respond.
  </div>
  <TicketAttachments
    attachments={
      Immutable.List [
      ]
    }
    className="p-2"
    deleteAttachment={[Function]}
    removable={true}
  />
</div>
`;

exports[`TicketReply component should render an alert instead of the editor because there is an attachment and it is not allowed to send text AND attachments for this source type 1`] = `
<div
  className="component alert-warning"
>
  <div
    className="alert"
  >
    When using Facebook, you can either send a text message, or an attachment, but not both at the same time. If you want to write a message, remove the attachment first.
  </div>
  <TicketAttachments
    attachments={
      Immutable.List [
        "foo",
      ]
    }
    className="p-2"
    deleteAttachment={[Function]}
    removable={true}
  />
</div>
`;

exports[`TicketReply component should render the editor 1`] = `
<div
  className="component"
>
  <Connect(TicketReplyEditor)
    actions={Object {}}
    richAreaRef={[Function]}
    ticket={
      Immutable.Map {
        reply_options: Immutable.Map {
          email: Immutable.Map {
            answerable: true,
          },
          chat: Immutable.Map {
            answerable: false,
            reason: "You cannot respond.",
          },
          facebook-messenger: Immutable.Map {
            answerable: true,
          },
        },
      }
    }
  />
  <TicketAttachments
    attachments={
      Immutable.List [
      ]
    }
    className="p-2"
    deleteAttachment={[Function]}
    removable={true}
  />
</div>
`;
